feat(security-and-admin-api): Implemented Spring Security with authorization and JWT filters, added admin API endpoints and new IT tests